# foray

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DoxygenConfig.ini  LICENSE.txt  annotated.html  changelog_8md.html  classes.html  classforay_1_1Exception-members.html  classforay_1_1Exception.html  classforay_1_1NoMoveDefaults-members.html  classforay_1_1NoMoveDefaults.html  classforay_1_1Polymorphic-members.html  classforay_1_1Polymorphic.html  classforay_1_1as_1_1Blas-members.html  classforay_1_1as_1_1Blas.html  classforay_1_1as_1_1BlasInstance-members.html  classforay_1_1as_1_1BlasInstance.html  classforay_1_1as_1_1GeometryMetaBuffer-members.html  classforay_1_1as_1_1GeometryMetaBuffer.html  classforay_1_1as_1_1Tlas-members.html  classforay_1_1as_1_1Tlas.html  classforay_1_1base_1_1AppFrameTiming-members.html  classforay_1_1base_1_1AppFrameTiming.html  classforay_1_1base_1_1DefaultAppBase-members.html  classforay_1_1base_1_1DefaultAppBase.html  classforay_1_1base_1_1FrameRenderInfo-members.html  classforay_1_1base_1_1FrameRenderInfo.html  classforay_1_1base_1_1InFlightFrame-members.html  classforay_1_1base_1_1InFlightFrame.html  classforay_1_1base_1_1MinimalAppBase-members.html  classforay_1_1base_1_1MinimalAppBase.html  classforay_1_1base_1_1RenderLoop-members.html  classforay_1_1base_1_1RenderLoop.html  classforay_1_1base_1_1VulkanDevice-members.html  classforay_1_1base_1_1VulkanDevice.html  classforay_1_1base_1_1VulkanInstance-members.html  classforay_1_1base_1_1VulkanInstance.html  classforay_1_1base_1_1VulkanWindowSwapchain-members.html  (+834 more)
.github/workflows/: main.yml
apps/importance_sampling_rt/: CMakeLists.txt  importance_sampling_rt.cpp  importance_sampling_rt.hpp
apps/importance_sampling_rt/logs/: log.1.txt
apps/importance_sampling_rt/models/: source.md
apps/importance_sampling_rt/shaders/: compile.bat  frag.spv  main.vert  vert.spv
cmakescripts/: compilerconfig.cmake  compileshader.cmake  locatesdl2.cmake
docs/: changelog.md  cmakereference.md  synchronization.md  template.md  useforay.md
removed/: managedimage.cpp  managedimage.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  (+123 more)
src/: dllmain.cpp  foray_api.hpp  foray_basics.hpp  foray_event.hpp  foray_exception.cpp  foray_exception.hpp  foray_fmt.hpp  foray_glm.hpp  foray_logger.cpp  foray_logger.hpp  foray_mem.hpp  foray_nameof.hpp  foray_precompile.hpp  foray_vkb.cpp  foray_vkb.hpp  foray_vma.hpp  foray_vulkan.cpp  foray_vulkan.hpp  hsk_base_app.hpp  hsk_basics.hpp  hsk_env.cpp  hsk_env.hpp  hsk_exception.cpp  hsk_exception.hpp  hsk_export.hpp  hsk_glm.hpp  hsk_managedubo.hpp  hsk_memory.hpp  hsk_precompile.hpp  hsk_rtrpf.hpp  hsk_vkHelpers.cpp  hsk_vkHelpers.hpp  hsk_vmaHelper.cpp  hsk_vmaHelper.hpp  hsk_vmaHelpers.cpp  hsk_vmaHelpers.hpp  readme.md
src/as/: foray_as.hpp  foray_as_declares.hpp  foray_blas.cpp  foray_blas.hpp  foray_blasinstance.cpp  foray_blasinstance.hpp  foray_geometrymetabuffer.cpp  foray_geometrymetabuffer.hpp  foray_tlas.cpp  foray_tlas.hpp
src/base/: foray_applicationloop.cpp  foray_applicationloop.hpp  foray_applifetime.hpp  foray_base.hpp  foray_base_declares.hpp  foray_defaultappbase.cpp  foray_defaultappbase.hpp  foray_framerenderinfo.hpp  foray_inflightframe.cpp  foray_inflightframe.hpp  foray_minimalappbase.cpp  foray_minimalappbase.hpp  foray_renderloop.cpp  foray_renderloop.hpp  foray_shadercompiler.cpp  foray_shadercompiler.hpp  foray_vulkandevice.cpp  foray_vulkandevice.hpp  foray_vulkaninstance.cpp  foray_vulkaninstance.hpp  foray_vulkanwindow.cpp  foray_vulkanwindow.hpp  foray_vulkanwindowswapchain.cpp  foray_vulkanwindowswapchain.hpp  hsk_defaultappbase.cpp  hsk_defaultappbase.hpp  hsk_framerenderinfo.hpp  hsk_logger.cpp  hsk_logger.hpp  hsk_minimalappbase.cpp  hsk_minimalappbase.hpp  hsk_shadercompiler.cpp  hsk_shadercompiler.hpp  hsk_vkcontext.hpp
src/bench/: foray_bench.hpp  foray_bench_declares.hpp  foray_benchmarkbase.cpp  foray_benchmarkbase.hpp  foray_csvfilesink.cpp  foray_csvfilesink.hpp  foray_devicebenchmark.cpp  foray_devicebenchmark.hpp  foray_hostbenchmark.cpp  foray_hostbenchmark.hpp  foray_logsink.cpp  foray_logsink.hpp  foray_repetitionlog.cpp  foray_repetitionlog.hpp  hsk_bench_declares.hpp  hsk_benchmarkbase.cpp  hsk_benchmarkbase.hpp  hsk_devicebenchmark.cpp  hsk_devicebenchmark.hpp  hsk_hostbenchmark.cpp  hsk_hostbenchmark.hpp
src/core/: foray_commandbuffer.cpp  foray_commandbuffer.hpp  foray_context.hpp  foray_core.hpp  foray_core_declares.hpp  foray_descriptorbinding.cpp  foray_descriptorbinding.hpp  foray_descriptorset.cpp  foray_descriptorset.hpp  foray_descriptorsethelper.cpp  foray_descriptorsethelper.hpp  foray_deviceresource.hpp  foray_imagelayoutcache.cpp  foray_imagelayoutcache.hpp  foray_logger.cpp  foray_logger.hpp  foray_managed3dimage.cpp  foray_managed3dimage.hpp  foray_managedbuffer.cpp  foray_managedbuffer.hpp  foray_managedimage.cpp  foray_managedimage.hpp  foray_managedresource.cpp  foray_managedresource.hpp  foray_samplercollection.cpp  foray_samplercollection.hpp  foray_shadermanager.cpp  foray_shadermanager.hpp  foray_shadermodule.cpp  foray_shadermodule.hpp  foray_swapchainimageinfo.hpp  foray_vkcontext.hpp
src/foray/: api.hpp  basics.hpp  event.hpp  exception.cpp  logger.cpp  mem.hpp  precompile.hpp  vkb.cpp  vkb.hpp  vma.hpp  vulkan.cpp  vulkan.hpp
src/glTF/: hsk_Material.cpp  hsk_Material.hpp  hsk_animation.cpp  hsk_animation.hpp  hsk_boundingBox.cpp  hsk_boundingBox.hpp  hsk_boundingbox.cpp  hsk_boundingbox.hpp  hsk_camera.cpp  hsk_camera.hpp  hsk_geo.cpp  hsk_geo.hpp  hsk_glTF.hpp  hsk_glTF_declares.hpp  hsk_gltf.hpp  hsk_gltf_declares.hpp  hsk_material.cpp  hsk_material.hpp  hsk_mesh.cpp  (+16 more)
(+663 files in other folders)
